--- a/src/pages.html
+++ b/src/pages.html
@@ -7,6 +7,7 @@
 	<li><a href="articles.html" target="_blank">Новости</a></li>
 	<li><a href="article.html" target="_blank">Страница новости, статьи</a></li>
 	<li><a href="card.html" target="_blank">Карточка</a></li>
+	<li><a href="compare.html" target="_blank">Сравнение товаров</a></li>
 </ol>
 
 
