New filters. Scroll tracking menu in product card

--- a/src/inc-header.html
+++ b/src/inc-header.html
@@ -43,7 +43,7 @@
 
   <div class="inner">
     <div class="header-flex flex align-justify valign-center">
-      <div class="header-logo"><a href="#" class="logo"><img src="images/logo.svg" alt="Botmania"></a></div>
+      <div class="header-logo"><a href="#" class="logo"><img src="images/logo220.svg" alt="Botmania"></a></div>
 
       <div class="header-menu flex align-justify valign-center">
         <nav class="main-menu">
