--- a/src/inc-footer.html
+++ b/src/inc-footer.html
@@ -6,7 +6,7 @@
   <div class="inner">
     <div class="footer-flex flex valign-center align-justify">
       <div class="footer-logo">
-        <a href="/" class="footer-logo-link"><img src="images/footer-logo.svg" alt="Обзоры и рейтинги роботов-пылесосов"></a>
+        <a href="/" class="footer-logo-link"><img src="images/logo220.svg" alt="Обзоры и рейтинги роботов-пылесосов"></a>
       </div>
       <ul class="footer-menu">
         <li><a href="#">Каталог</a></li>
