Tags for product card

--- a/src/card.html
+++ b/src/card.html
@@ -140,6 +140,13 @@
           <h5>Вывод</h5>
           <p>Это отличный пылесос для плитки, деревянных полов и натурального ковра. после того, как ROBOROCK пылесосит Ваш общий этаж, он автоматически вернется к зарядному устройству и перезарядится ... ЕДИНСТВЕННАЯ причина, по которой мы купили этот робот-пылесос, была в том, что 4 из семьи Моей Жены купили их и в восторге от них. Настоятельно рекомендуется для всех... Вы не пожалеете. Я не смотрел ни на какие другие пылесосы Robot вообще.</p>
         </div>
+
+        <div class="card-tags">
+          <a href="#" class="filters-tag">Фильтр 1</a>
+          <a href="#" class="filters-tag">Фильтр 2</a>
+          <a href="#" class="filters-tag">Фильтр 3</a>
+          <a href="#" class="filters-tag">Фильтр 4</a>
+        </div>
       </div><!--.card-main-->
 
       <div class="white-content card-overall article  card-scroll-tracking" id="card_overall">
