Filters, sidebars and tabs in responsive design

--- a/src/article.html
+++ b/src/article.html
@@ -221,7 +221,7 @@
    </article>
   </main>
 
-  <aside class="col-lg-3 col-md-4 desktop-only">
+  <aside class="col-lg-3 col-md-4">
     <div class="white-block">
       <div class="white-block-title">Полезная информация</div>
       <div class="usefull-news">
