--- a/src/articles.html
+++ b/src/articles.html
@@ -72,7 +72,7 @@
       <a href="#" class="pgn-btn">Вперед</a>
     </div>
   </main>
-  <aside class="col-lg-3 col-md-4 desktop-only">
+  <aside class="col-lg-3 col-md-4">
     <div class="white-block">
       <div class="white-block-title">Роботы-пылесосы</div>
       <div class="mini-products">
