--- a/src/card.html
+++ b/src/card.html
@@ -407,7 +407,7 @@
     
   </main>
 
-  <aside class="col-lg-3 col-md-3 desktop-only">
+  <aside class="col-lg-3 col-md-3">
     <div class="white-block">
       <div class="white-block-title">Полезная информация</div>
       <div class="usefull-news">
