--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--#include file="inc-header.html"-->
 
 <div class="row row-front">
-  <aside class="col-md-3 desktop-only">
+  <aside class="col-md-3 col-catalog-filters">
     <div class="filters">
       <div class="filters-group">
         <div class="filters-title">Каталог</div>
