Hint for scrolling tabs in product card. Bugs fix

--- a/src/card.html
+++ b/src/card.html
@@ -41,15 +41,16 @@
         </div><!--.card-cols-->
       </div>
 
-      <div class="card-tabs">
-
-        <a href="#card_eval" class="scroll-link active">Оценка</a>
-        <a href="#card_overall" class="scroll-link">Обзор</a>
-        <a href="#card_comments" class="scroll-link">Отзывы</a>
-        <a href="#card_questions" class="scroll-link">Вопросы</a>
-        <a href="#card_characters" class="scroll-link">Технические характеристики</a>
-        <a href="#card_manual" class="scroll-link">Инструкция</a>
-        <a href="#card_video" class="scroll-link">Видео</a>
+      <div class="card-tabs-wrap">
+        <div class="card-tabs">
+          <a href="#card_eval" class="scroll-link active">Оценка</a>
+          <a href="#card_overall" class="scroll-link">Обзор</a>
+          <a href="#card_comments" class="scroll-link">Отзывы</a>
+          <a href="#card_questions" class="scroll-link">Вопросы</a>
+          <a href="#card_characters" class="scroll-link">Технические характеристики</a>
+          <a href="#card_manual" class="scroll-link">Инструкция</a>
+          <a href="#card_video" class="scroll-link">Видео</a>
+        </div>
       </div>
 
       <div class="white-content card-main card-scroll-tracking" id="card_eval">
